<resources>
    <string name="app_name">BADT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_flashcards">Flashcards</string>
    <string name="menu_video">Video</string>
    <string name="bt_video">Video</string>
    <string name="bt_playlist">Playlist</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>

    <string name="my_notes">Restaurants</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="notesName">Restaurant Name</string>
    <string name="restaurantCuisineType">Cuisine Type</string>
    <string name="restaurantLocation">Location</string>
    <string name="restaurantRating">Rating</string>
    <string name="scroll">Scroll on cards and tap for more information</string>


    <!-- Nav drawer titles. Can be accessed programaticaly using a String[] -->
    <string-array name="nav_drawer_titles">
        <item>Categories</item>
        <item>Settings</item>
    </string-array>
    <!-- Nav drawer icons. Can be accessed pragmatically using a TypedArray[] -->
    <!--    <array name="nav_drawer_icons">-->
    <!--        <item>@drawable/ic_categories</item>-->
    <!--        <item>@drawable/ic_settings</item>-->
    <!--    </array>-->


    <string name="description">You are designing for SOMEONE ELSE not for yourself</string>

    <string name="answer_1">Answer 1</string>
    <string name="answer3">Answer3</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_2">Answer 2</string>
    <string name="confirm">Confirm</string>
    <string name="question">Question</string>
    <string name="quiz_yourself_here">Quiz Yourself Here!</string>
    <string name="menu_note">Note</string>
    <string name="topic">Topic</string>
    <string name="tap">Tap to reveal, scroll for different cards</string>
    <string name="welcomeTap">Scroll to find out more about our app! Tap to Enter</string>

    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="page_number">Page Number</string>

    <string name="noteTitleHint">Give your note a name</string>
    <string name="noteContentHint">Write your notes here</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="noteTitle">Note Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
