<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_flashcard"
            android:icon="@drawable/ic_menu_flashcard"
            android:title="@string/menu_flashcards" />

    </group>
</menu>
