<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.katrinaann.badt.ui.drawerFragments.NoteSelectionFragment"
        android:label="Home"
        tools:layout="@layout/fragment_article_selection_viewpager">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.katrinaann.badt.ui.drawerFragments.NoteSelectionFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_article_selection_viewpager">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_note"
        android:name="com.katrinaann.badt.ui.blogandnotes.NoteListActivity"
        android:label="Note"
        tools:layout="@layout/activity_note_list" />

    <fragment
        android:id="@+id/nav_flashcard"
        android:name="com.katrinaann.badt.ui.drawerFragments.FlashcardSelectionFragment"
        android:label="@string/menu_flashcards"
        tools:layout="@layout/fragment_article_selection_viewpager" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.katrinaann.badt.ui.drawerFragments.QuizSelectionFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_article_selection_viewpager" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.katrinaann.badt.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

</navigation>